[JENKINS-50447_squash] Fix different comments from @daniel-beck regarding titles. Further enhanced spacing of label and input

--- a/war/src/main/webapp/css/signup.css
+++ b/war/src/main/webapp/css/signup.css
@@ -49,3 +49,6 @@ form.signup{
   display: flex;
   align-items: center;
 }
+label {
+  margin-bottom: 7px;
+}
